--- a/styles/option.css
+++ b/styles/option.css
@@ -9,6 +9,9 @@ a {
     color: #000;
 }
 
+body {
+    padding: 20px 4px;
+}
 .item {
     margin: 10px;
 }
@@ -38,7 +41,6 @@ input[type='checkbox'] {
 }
 
 .option-form {
-    padding: 20px 4px;
     max-width: 500px;
 }
 
@@ -82,6 +84,10 @@ input[type='checkbox'] {
     display: none;
 }
 
-#message.error {
+#message-container {
+    margin: 10px 10px;
+}
+
+.message.error {
     color: #ff0000;
 }
