--- a/styles/option.css
+++ b/styles/option.css
@@ -11,7 +11,29 @@ a {
 
 body {
     padding: 20px 4px;
+
+    --bg-color: #fff;
+    --text-color: inherit;
+    --purple-border: rgb(145,71,255);
+    --purple: #772ce8;
+    --input-bg: #eee;
 }
+
+body[theme="dark"] {
+    --bg-color: #2d2d2d;
+    --text-color: #ccc;
+    --purple-border: #543864;
+    --purple: #543864;
+    --input-bg: #ccc;
+
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+input {
+    background-color: var(--input-bg);
+}
+
 .item {
     margin: 10px;
 }
@@ -29,7 +51,7 @@ body {
     padding: 6px 10px;
     margin: 2px 0;
     border-radius: 4px;
-    border: 2px solid rgb(145, 71, 255);
+    border: 2px solid var(--purple);
 }
 
 input::placeholder {
@@ -72,7 +94,7 @@ input[type='checkbox'] {
     padding: 6px 12px;
     border-radius: 6px;
     border: none;
-    background-color: #772ce8;
+    background-color: var(--purple);
     color: #efeff1;
 }
 
